# MO_Tech

./: Dockerfile  README.md  pyproject.toml
docs/: MO.postman_collection.json
docs/guide/: Docker.md  Endpoints.md  Local.md
mo_tech/: manage.py
mo_tech/Customers/: admin.py  models.py  serializers.py  urls.py  views.py
mo_tech/Customers/migrations/: 0001_initial.py
mo_tech/Loans/: admin.py  models.py  serializers.py  urls.py  views.py
mo_tech/Loans/migrations/: 0001_initial.py
mo_tech/Payments/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
mo_tech/Payments/migrations/: 0001_initial.py
mo_tech/login/: urls.py  views.py
mo_tech/mo_tech/: asgi.py  settings.py  urls.py  wsgi.py
